--- a/index.html
+++ b/index.html
@@ -305,13 +305,13 @@ a { text-decoration: none; color: inherit; transition: 0.3s; }
 .exp-text-card h3 { margin: 0 0 10px; font-size: 20px; font-weight: 700; color: #1e293b; }
 .exp-text-card p { margin: 0; font-size: 15px; color: #475569; line-height: 1.5; }
 
-/* Part 2: Image Slider (Scroll Snap) */
+/* Part 2: Image Slider (Scroll Snap) - PREMIUM TOUCH */
 .image-slider {
   display: flex;
-  gap: 24px;
+  gap: 32px; /* Thoda gap badhaya */
   overflow-x: auto;
   scroll-snap-type: x mandatory;
-  padding-bottom: 24px;
+  padding-bottom: 40px; /* Shadow ke liye jagah */
   -webkit-overflow-scrolling: touch;
   margin: 0 -24px;
   padding-left: 24px;
@@ -322,23 +322,34 @@ a { text-decoration: none; color: inherit; transition: 0.3s; }
 .image-slider { -ms-overflow-style: none; scrollbar-width: none; }
 
 .slider-item {
-  min-width: 400px; /* Width of each image card */
+  min-width: 450px; /* Width of each image card */
+  aspect-ratio: 16/9; /* Standard Landscape Ratio */
   flex: 0 0 auto;
   scroll-snap-align: center;
-  border-radius: 20px;
+  border-radius: 24px; /* Soft Corners */
   overflow: hidden;
-  box-shadow: 0 10px 25px -5px rgba(0,0,0,0.1);
-  background: #fff;
-  border: 4px solid #fff;
-  transition: 0.3s;
+  
+  /* GLASS FRAME EFFECT */
+  background: rgba(255, 255, 255, 0.5);
+  backdrop-filter: blur(10px);
+  border: 1px solid rgba(255, 255, 255, 0.7);
+  padding: 8px; /* Inner Spacing like a Frame */
+  
+  box-shadow: 0 15px 40px -10px rgba(0,0,0,0.08); /* Premium Soft Shadow */
+  transition: 0.4s ease;
 }
 .slider-item img {
   width: 100%;
   height: 100%;
   object-fit: cover;
+  border-radius: 18px; /* Image ke corners bhi round */
   display: block;
 }
-.slider-item:hover { transform: scale(1.02); }
+.slider-item:hover { 
+  transform: translateY(-5px) scale(1.01); 
+  box-shadow: 0 25px 50px -12px rgba(99, 102, 241, 0.15); /* Hover par halka purple glow */
+  border-color: #fff;
+}
 
 
 /* Profit */
@@ -380,7 +391,7 @@ input:focus, textarea:focus { outline: none; border-color: #6366F1; background: 
 
 /* Mobile Fixes */
 @media(max-width: 900px) {
-  .header { margin: 0; top: 0; border-radius: 0; border: none; border-bottom: 1px solid rgba(255,255,255,0.5); width: 100%; }
+  .header { margin: 0; top: 0; border-radius: 0; border: none; border-bottom: 1px solid rgba(255,255,255,0.5); width: 100%; max-width: 100%; left: 0; transform: none; }
   .header-inner { padding: 0 20px; }
   .hero { grid-template-columns: 1fr; text-align: center; gap: 40px; padding-top: 80px !important; }
   .hero h1 { font-size: 40px; }
