--- a/index.html
+++ b/index.html
@@ -346,7 +346,10 @@ input:focus, textarea:focus { outline: none; border-color: #6366F1; background: 
 @media(max-width: 900px) {
   .header { margin: 0; top: 0; border-radius: 0; border: none; border-bottom: 1px solid rgba(255,255,255,0.5); width: 100%; max-width: 100%; left: 0; transform: none; }
   .header-inner { padding: 0 20px; }
-  .hero { grid-template-columns: 1fr; text-align: center; gap: 40px; padding-top: 80px !important; }
+  
+  /* FIXED: Increased Padding Top to push content down */
+  .hero { grid-template-columns: 1fr; text-align: center; gap: 40px; padding-top: 160px !important; }
+  
   .hero h1 { font-size: 40px; }
   .nav-links { display: none; }
   .services, .profit-grid { grid-template-columns: 1fr; gap: 20px; }
