Revise hero text and improve responsive styles
Updated hero section text and adjusted font sizes for responsiveness.

--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@ a { text-decoration: none; color: inherit; transition: 0.3s; }
 
 /* --- HERO --- */
 .hero { display: grid; grid-template-columns: 1.1fr 0.9fr; gap: 60px; padding: 140px 24px 100px; align-items: center; }
-.hero h1 { font-size: 60px; line-height: 1.1; letter-spacing: -2.5px; margin-bottom: 24px; font-weight: 800; color: #1e293b; }
+.hero h1 { font-size: 56px; line-height: 1.1; letter-spacing: -2.5px; margin-bottom: 24px; font-weight: 800; color: #1e293b; }
 .gradient-text { background: var(--primary-gradient); -webkit-background-clip: text; -webkit-text-fill-color: transparent; }
 .hero p { color: #475569; font-size: 20px; margin-bottom: 32px; max-width: 90%; font-weight: 500; }
 .trust-badge {
@@ -347,10 +347,10 @@ input:focus, textarea:focus { outline: none; border-color: #6366F1; background: 
   .header { margin: 0; top: 0; border-radius: 0; border: none; border-bottom: 1px solid rgba(255,255,255,0.5); width: 100%; max-width: 100%; left: 0; transform: none; }
   .header-inner { padding: 0 20px; }
   
-  /* FIXED: Increased Padding Top to push content down */
+  /* FIXED: Increased Padding Top to push content down below fixed header */
   .hero { grid-template-columns: 1fr; text-align: center; gap: 40px; padding-top: 160px !important; }
   
-  .hero h1 { font-size: 40px; }
+  .hero h1 { font-size: 36px; }
   .nav-links { display: none; }
   .services, .profit-grid { grid-template-columns: 1fr; gap: 20px; }
   .contact-box { padding: 24px; }
@@ -435,9 +435,9 @@ footer { padding: 60px 24px; text-align: center; color: #64748b; font-size: 14px
     <div class="trust-badge">
        ✨ Founder-Led Growth Specialist
     </div>
-    <h1>Scale your DTC Brand with <br> <span class="gradient-text">Profit-First Systems</span></h1>
+    <h1>Fix Unprofitable Growth in Your DTC Brand <br> <span class="gradient-text">with Profit-First Systems</span></h1>
     <p>
-      I align Meta & Google Ads with creative strategy and real business metrics. No vanity metrics, just profitable scaling.
+      I align Meta & Google Ads with creative strategy and real business metrics — so growth compounds without burning cash.
     </p>
     <div style="margin-top:32px">
       <a href="#contact" class="cta-btn">Book a FREE 15-Min Audit Call</a>
@@ -467,15 +467,15 @@ footer { padding: 60px 24px; text-align: center; color: #64748b; font-size: 14px
   <div style="max-width: 800px;">
     <p style="font-size: 18px; color: var(--text-muted);">
       I’m <strong style="color: var(--text-main);">Pritam</strong>, a performance marketer working with
-      <strong>founder-led DTC brands</strong> that want profitable, controlled growth.
+      <strong>founder-led DTC brands</strong> focused on profitable, controlled growth.
     </p>
     <p style="font-size: 18px; color: var(--text-muted);">
-      I manage Meta & Google Ads, but my real work is aligning paid media with
+      I run Meta & Google Ads, but my real work is aligning paid media with
       <strong>margins, AOV, creatives, and cash flow</strong> — so scaling doesn’t break the business.
     </p>
     <p style="font-size: 18px; color: var(--text-muted);">
-      I’ve managed <strong style="color: var(--text-main);">₹30L+ in monthly ad spend</strong> and helped brands grow.
-      I don’t chase vanity ROAS. I build <strong>profit-first systems</strong> founders can scale with clarity and confidence.
+      I’ve managed <strong style="color: var(--text-main);">₹30L+ in monthly ad spend</strong> and helped brands grow without chasing vanity ROAS.
+      I build <strong>profit-first systems</strong> founders can scale with clarity and confidence.
     </p>
   </div>
 </section>
