Update Instagram link in index.html

--- a/index.html
+++ b/index.html
@@ -627,7 +627,7 @@ footer { padding: 60px 24px; text-align: center; color: #64748b; font-size: 14px
     </form>
     
     <div class="instagram-link">
-      Or <a href="https://ig.me/m/mrpipu">Directly DM Me</a>
+      Or <a href="https://ig.me/m/pritam.roas">Directly DM Me</a>
     </div>
   </div>
 </section>
