Update logo image paths and comments in index.html

--- a/index.html
+++ b/index.html
@@ -132,17 +132,17 @@ a { text-decoration: none; color: inherit; transition: 0.3s; }
   font-weight: 500;
 }
 
-/* Tools Section (LOGOS UPDATED FOR MANUAL UPLOAD) */
+/* Tools Section (LOGOS UPDATED) */
 .tools-row { margin-top: 40px; display: flex; align-items: center; gap: 30px; position: relative; }
 .tool-logos { display: flex; gap: 20px; align-items: center; }
 
 /* Logo Images Style */
 .tool-icon-img {
-  height: 30px; /* Adjust height as needed */
+  height: 30px; 
   width: auto;
   object-fit: contain;
   opacity: 0.9;
-  filter: grayscale(100%) brightness(200%); /* Makes them white/bright */
+  filter: grayscale(100%) brightness(200%); /* Logos white/bright */
   transition: 0.3s;
 }
 .tool-icon-img:hover { filter: grayscale(0) brightness(100%); opacity: 1; transform: scale(1.05); }
@@ -444,9 +444,9 @@ input:focus, textarea:focus { outline: none; border-color: var(--primary); }
       
       <div class="tools-row">
         <div class="tool-logos">
-          <img src="YOUR_SHOPIFY_LOGO.png" alt="Shopify" class="tool-icon-img">
-          <img src="YOUR_FACEBOOK_LOGO.png" alt="Facebook" class="tool-icon-img">
-          <img src="YOUR_META_LOGO.png" alt="Meta" class="tool-icon-img">
+          <img src="images/shopify-logo.png" alt="Shopify" class="tool-icon-img">
+          <img src="images/facebook-logo.png" alt="Facebook" class="tool-icon-img">
+          <img src="images/meta-logo.png" alt="Meta" class="tool-icon-img">
         </div>
         <div class="tools-text">
             <svg class="curved-arrow" width="40" height="40" viewBox="0 0 50 50" fill="none" stroke="white">
@@ -458,7 +458,7 @@ input:focus, textarea:focus { outline: none; border-color: var(--primary); }
       </div>
     </div>
     <div class="hero-image-container">
-      <img src="68087bf29069e11fdf5d4e30_Group 77.avif" alt="Ads Collage" class="hero-collage-img">
+      <img src="images/hero-collage.avif" alt="Ads Collage" class="hero-collage-img">
     </div>
   </div>
 </section>
