--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
 j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
-})(window,document,'script','dataLayer','GTM-XXXXXXX');</script>
+})(window,document,'script','dataLayer','GTM-TZD95X9H');</script>
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no" />
 <title>PritamGrows — Performance Marketer</title>
@@ -353,7 +353,7 @@ input[type=range]::-webkit-slider-thumb { -webkit-appearance: none; width: 20px;
 </head>
 <body>
 
-<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-XXXXXXX"
+<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-TZD95X9H"
 height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 <div class="grid-bg"></div>
 
@@ -755,63 +755,3 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 </body>
 </html>
 
----
-
-### **Part 2: GTM Setup Guide (Step-by-Step)**
-
-Ab website ka code ready hai. Ab GTM Dashboard mein jaakar in IDs ko use karke events banate hain.
-
-#### **Step 1: Get Your GTM Container ID**
-1.  Open [tagmanager.google.com](https://tagmanager.google.com).
-2.  Apne container par click karein.
-3.  Upar ID `GTM-XXXXXXX` hoga, usse copy karke upar code mein replace kar dein.
-
-#### **Step 2: Connect GA4**
-Agar GA4 connect nahi hai, toh pehle wo karein:
-1.  **Tags** > **New** > **Google Tag**.
-2.  **Tag ID**: `G-ZQHGJWHJ8W`.
-3.  **Triggering**: `All Pages`.
-4.  **Save**.
-
-#### **Step 3: Setup `cta_click` (Book Call Button)**
-Humne code mein `id="cta-btn"` laga diya hai.
-
-
-1.  **Triggers** > **New**.
-2.  Type: **Click - All Elements**.
-3.  Select: **Some Clicks**.
-4.  Condition: **Click ID** | **contains** | `cta` (Ye `header-cta`, `hero-cta`, `form-cta` sabko pakad lega).
-5.  Save as "Trigger - All CTA Buttons".
-6.  **Tags** mein jao > **New** > **GA4 Event**.
-7.  Event Name: `cta_click`.
-8.  Trigger ye wala select karo. Save.
-
-#### **Step 4: Setup `social_click` (Instagram)**
-Humne code mein `id="instagram-link"` lagaya hai.
-
-1.  **Triggers** > **New**.
-2.  Type: **Click - Just Links**.
-3.  Select: **Some Link Clicks**.
-4.  Condition: **Click ID** | **equals** | `instagram-link`.
-5.  Save as "Trigger - Instagram Link".
-6.  **Tags** mein jao > **New** > **GA4 Event**.
-7.  Event Name: `social_click`.
-8.  Trigger ye wala select karo. Save.
-
-#### **Step 5: Setup `generate_lead` (Form Submit)**
-Sabse best tarika: Jab user `thank-you.html` page par aaye.
-
-1.  **Triggers** > **New**.
-2.  Type: **Page View**.
-3.  Select: **Some Page Views**.
-4.  Condition: **Page Path** | **contains** | `thank-you`.
-5.  Save as "Trigger - Thank You Page".
-6.  **Tags** mein jao > **New** > **GA4 Event**.
-7.  Event Name: `generate_lead`.
-8.  Trigger ye wala select karo. Save.
-
-#### **Step 6: Publish**
-Upar right corner mein **Submit** aur phir **Publish** dabayein.
-
-**Kaam Khatam!** 🚀
-Code upload karo, aur GTM publish karo. Sab events track hone lagenge.
