--- a/thank-you.html
+++ b/thank-you.html
@@ -1,6 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+})(window,document,'script','dataLayer','GTM-TZD95X9H');</script>
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no" />
 <title>Thank You! — PritamGrows</title>
@@ -9,7 +14,6 @@
 <script src="https://unpkg.com/lucide@latest"></script>
 
 <style>
-/* Same dark theme settings */
 :root {
   --bg-dark: #020204;
   --card-border: rgba(255, 255, 255, 0.08);
@@ -30,7 +34,7 @@ body {
   overflow: hidden;
 }
 
-/* Snowfall (Keep it consistent) */
+/* Snowfall */
 .snowflake {
   position: fixed; top: -20px; color: #fff; opacity: 0.9;
   z-index: 9998; pointer-events: none;
@@ -59,6 +63,8 @@ p { font-size: 20px; color: var(--text-muted); margin-bottom: 32px; max-width: 5
 </head>
 <body>
 
+<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-TZD95X9H"
+height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 <div class="icon-box">
   <i data-lucide="check" size="40" color="#6938ef"></i>
 </div>
